[package]
name = "pingorapy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingorapy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
async-trait = "0.1.89"
pingora = { version = "0.7.0", features = ["lb"] }
